syntax = "proto3";

package T;

message ImportTest {
  optional string id = 1;
  optional string password = 2;
}